tests/MiddleEnd/Input/CodeGen/Valid/IfElse.wl
// 11
int main() {
    bool arg = true;
    if (arg) {
        return 11;
    } else {
        return 22;
    }
    return 33;
}